--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="light_green">#c7cc41</color>
     <color name="gray">#dddebd</color>
     <color name="orange">#fa881e</color>
+    <color name="green">#65d44e</color>
 </resources>
