--- a/app/src/main/res/layout/fragment_land_ownership_selection.xml
+++ b/app/src/main/res/layout/fragment_land_ownership_selection.xml
@@ -9,23 +9,27 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:layoutDirection="locale">
         <Spinner
             android:id="@+id/spinLandOwned"
             android:layout_width="267dp"
             android:layout_height="35dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="30dp"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
             android:textSize="16sp"
             android:background="@drawable/attachment_spinner_bg"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:visibility="visible"
-            android:layout_marginLeft="8dp" />
+             />
         <RadioGroup
             android:layout_width="267dp"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
             android:id="@+id/rg">
             <RadioButton
                 style="@style/font_medium_regular"
@@ -40,7 +44,6 @@
                 android:layout_marginBottom="30dp"
                 android:visibility="visible"
                 />
-
             <RadioButton
                 style="@style/font_medium_regular"
                 android:id="@+id/rb_notOwner"
