Contactus and FeedBack changes,Logout functionality

--- a/app/src/main/res/layout/fragment_bottom_navigation.xml
+++ b/app/src/main/res/layout/fragment_bottom_navigation.xml
@@ -252,7 +252,7 @@
                         android:textColor="@color/white"/>
                 </LinearLayout>
 
-                <LinearLayout
+               <!-- <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -280,7 +280,7 @@
                         android:text="Register Land"
                         android:layout_gravity="center"
                         android:textColor="@color/white"/>
-                </LinearLayout>
+                </LinearLayout>-->
 
 
                 <!--<LinearLayout
