Dubai font issue

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -84,6 +84,7 @@
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPagerCreatePackage"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="40dp"/>
     </LinearLayout>
 </layout>
