--- a/app/src/main/res/layout/fragment_happiness.xml
+++ b/app/src/main/res/layout/fragment_happiness.xml
@@ -11,7 +11,8 @@
         <WebView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/webHappiness"/>
+            android:id="@+id/webHappiness"
+            android:layout_marginBottom="40dp"/>
     </LinearLayout>
 
 
