--- a/app/src/main/res/layout/adapter_grid_menu.xml
+++ b/app/src/main/res/layout/adapter_grid_menu.xml
@@ -17,15 +17,19 @@
         android:background="@drawable/grid_background_drawable"
         android:layout_margin="5dp"
         app:cardCornerRadius="5dp">
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:weightSum="1"
             android:background="@drawable/grid_background_drawable"
             android:layout_margin="5dp">
             <ImageView
                 android:id="@+id/imgMenuIcon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_weight="0.6"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginVertical="10dp"/>
@@ -49,8 +53,8 @@
                 android:textSize="12sp"
                 android:layout_height="wrap_content"
                 android:text="@{adapterGridMenuVM.getCurrentHomeGridMenuItems(position).id}"
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:layout_alignParentBottom="true"/>
-        </RelativeLayout>
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 </layout>
