--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,17 @@
                     android:textStyle="bold"
                     android:textColor="@color/white"
                     android:textSize="20sp"
-                    android:layout_marginHorizontal="30dp"
+                    android:layout_marginRight="100dp"
+                    android:layout_marginLeft="30dp"
                     android:layout_marginTop="10dp" />
+                <ImageView
+                    android:id="@+id/imgHelp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/ic_help_outline_white_24dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="20dp"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
