--- a/app/src/main/res/layout/fragment_parent_siteplan.xml
+++ b/app/src/main/res/layout/fragment_parent_siteplan.xml
@@ -33,6 +33,13 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="15dp"
                         android:src="@drawable/ic_chevron_left_24dp"/>
+                    <ImageView
+                        android:id="@+id/imgHelp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:layout_gravity="right"
+                        android:src="@drawable/ic_help_outline_white_24dp"/>
                 </FrameLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
