1.Dash board ui fix 2.Contactus facebook and twitter scrolling fix.

--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -23,6 +23,7 @@
                 android:text="Click on Bookmark details"
                 android:fontFamily="@font/dubai_font"
                 android:textSize="20dp"
+                android:visibility="gone"
                 android:id="@+id/textHeading"
                 android:textColor="@color/black"
                 android:layout_marginVertical="10dp"/>
