--- a/app/src/main/res/layout/adapter_bookmark.xml
+++ b/app/src/main/res/layout/adapter_bookmark.xml
@@ -17,11 +17,12 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="2"
-            android:layout_margin="10dp">
+            android:layout_margin="5dp">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -38,11 +39,23 @@
                         android:layout_height="wrap_content"
                         android:text="@{adapterBookmarkVM.getCurrentBookmark(position).ParcelNumber}"/>
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+
+                    android:orientation="horizontal">
+                <TextView
+                    style="@style/font_medium_regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Area: "/>
                 <TextView
                     style="@style/font_medium_regular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@{adapterBookmarkVM.getCurrentBookmark(position).Area}"/>
+                </LinearLayout>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -76,7 +89,8 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="2dp"
+            android:layout_marginHorizontal="5dp"
             android:background="@color/common_google_signin_btn_text_light_default"/>
     </LinearLayout>
 </layout>
