--- a/app/src/main/res/layout/adapter_mymap.xml
+++ b/app/src/main/res/layout/adapter_mymap.xml
@@ -12,7 +12,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:elevation="10dp"
         app:cardCornerRadius="10dp">
         <LinearLayout
@@ -114,6 +114,10 @@
                 </LinearLayout>
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/common_google_signin_btn_text_light_default"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
