--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -14,71 +14,80 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginVertical="10dp"
+            android:gravity="center"
+            android:layout_marginVertical="5dp"
             android:weightSum="2">
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginHorizontal="5dp"
                 android:layout_weight="1"
+                android:layout_gravity="center"
                 app:cardCornerRadius="5dp"
                 android:elevation="10dp">
-                <RelativeLayout
+                <LinearLayout
                     android:id="@+id/layoutMyMap"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
                     <ImageView
                         android:id="@+id/imgMyMap"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_marginBottom="5dp"
                         android:layout_marginTop="5dp"
-                        android:layout_centerHorizontal="true"/>
+                        android:layout_gravity="center"/>
+
                     <TextView
                         android:id="@+id/txtMyMap"
-                        android:layout_below="@+id/imgMyMap"
-                        android:layout_width="match_parent"
-                        android:textSize="16sp"
-                        android:layout_height="wrap_content"
-                        android:text="Site Plan"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
                         android:fontFamily="@font/dubai_font"
+                        android:layout_gravity="center_vertical"
                         android:singleLine="true"
-                        android:textAlignment="center"
+                        android:layout_marginTop="5dp"
+                        android:text="Site Plan"
                         android:textColor="@color/white"
-                        android:layout_marginBottom="5dp"/>
-                </RelativeLayout>
+                        android:textSize="16sp" />
+                </LinearLayout>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginHorizontal="5dp"
                 android:layout_weight="1"
+                android:layout_gravity="center"
                 app:cardCornerRadius="5dp"
                 android:elevation="10dp">
-                <RelativeLayout
+                <LinearLayout
                     android:id="@+id/layoutBookmark"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center">
                     <ImageView
                         android:id="@+id/imgBookMark"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_marginBottom="5dp"
                         android:layout_marginTop="5dp"
-                        android:layout_centerHorizontal="true"/>
+                        android:layout_gravity="center"/>
                     <TextView
                         android:id="@+id/txtBookmark"
-                        android:layout_below="@+id/imgBookMark"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:textSize="16sp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:text="Bookmark"
+                        android:layout_marginTop="5dp"
+                        android:layout_gravity="center_vertical"
                         android:fontFamily="@font/dubai_font"
                         android:singleLine="true"
-                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:layout_marginBottom="5dp"/>
-                </RelativeLayout>
+                        />
+                </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
         <androidx.viewpager.widget.ViewPager
