--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,6 +36,7 @@
             android:id="@+id/layoutNotification"
             android:layout_width="match_parent"
             android:layout_height="70dp"
+            android:layoutDirection="locale"
             android:layout_marginTop="10dp"
             android:elevation="10dp"
             android:background="@color/transparent"
