--- a/app/src/main/res/layout/fragment_mymap.xml
+++ b/app/src/main/res/layout/fragment_mymap.xml
@@ -24,6 +24,7 @@
                 android:fontFamily="@font/dubai_font"
                 android:textSize="20dp"
                 android:textColor="@color/black"
+                android:visibility="gone"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginVertical="5dp"/>
             <androidx.recyclerview.widget.RecyclerView
