--- a/app/src/main/res/layout/fragment_bottomsheet_map_function.xml
+++ b/app/src/main/res/layout/fragment_bottomsheet_map_function.xml
@@ -10,7 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/maroon_dark"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="56dp"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
         <View
             android:id="@+id/topView"
             android:layout_margin="20dp"
