--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,7 @@
     </data>
     <ScrollView
         android:layout_width="match_parent"
+        android:layoutDirection="locale"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp">
 
@@ -32,7 +33,7 @@
             app:layout_editor_absoluteX="0dp"
             app:layout_editor_absoluteY="0dp"/>
 
-        <FrameLayout
+        <LinearLayout
             android:id="@+id/layoutNotification"
             android:layout_width="match_parent"
             android:layout_height="70dp"
@@ -42,20 +43,23 @@
             android:background="@color/transparent"
             android:layout_marginHorizontal="10dp"
             app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"
             app:layout_editor_absoluteX="30dp"
             tools:layout_editor_absoluteX="140dp">
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycleNotification"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:setHorizontalAdapter="@{fragmentHomeVM.getInAppNotificationAdapter()}" />
-        </FrameLayout>
+                android:visibility="gone"
+                android:layoutDirection="locale" />
+        </LinearLayout>
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_editor_absoluteX="30dp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="100dp"
-            android:layout_marginTop="10dp"
+            app:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="120dp"
+            android:layout_marginTop="40dp"
             app:layout_constraintTop_toBottomOf="@+id/layoutNotification">
             <RelativeLayout
                 android:layout_width="match_parent"
